# Dynamic_ORB_SLAM2

./: .gitignore  CMakeLists.txt  Dependencies.md  README.md  run_kitti_stereo.sh  run_mask_sync.sh  run_tum_rgbd.sh  trajectory.txt
Examples/: CMakeLists.txt
Examples/DynamicExtractor/: DynamicExtractor.cc  DynamicExtractor.h  test.cc
Examples/MaskRCNN/: mask_rcnn.cc
Examples/Monocular/: mono_tum.cc
Examples/OpticalFlow/: fback.cc  optflow
Examples/RGB-D/: rgbd_tum.cc
Examples/Stereo/: stereo_kitti.cc
Examples/dnn/: .gitattributes  CMakeLists.txt  segmentation
ModelsCNN/: dynamic.txt
include/: DynamicExtractor.h  ORBextractor.h  System.h  Tracking.h
python/rgbd_benchmark_tools/: TUM_trajectory_evaluation.ipynb  Untitled.ipynb  add_pointclouds_to_bagfile.py  generate_pointcloud.py  generate_registered_pointcloud.py
results/: s_half_Dyna2.txt  s_half_Dyna4.txt  s_rpy_Dyna0.txt  s_rpy_Dyna2.txt  s_rpy_ORB.txt  s_static_Dyna0.txt  s_static_Dyna2.txt  s_static_Dyna3.txt  s_static_Dyna4.txt  s_xyz_Dyna1.txt  s_xyz_Dyna2.txt  s_xyz_Dyna4.txt  time_log.txt  time_log_naive.txt  w_rpy_Dyna4.txt  w_static_Dyna1.txt  w_static_ORB.txt  w_xyz_Dyna1.txt  w_xyz_ORB_.txt  x_half_Dyna1.txt  x_half_Dyna2.txt  x_half_Dyna3.txt
results/KITTI_stero/: 00_Dyna.txt  01_Dyna.txt  01_ORB.txt  02_Dyna.txt  03_Dyna.txt  04_Dyna.txt  06_Dyna.txt  07_Dyna.txt  09_Dyna.txt  10_Dyna.txt
results/TUM_rgbd/: s_half_Dyna0.txt  s_half_Dyna1.txt  s_half_Dyna3.txt  s_rpy_Dyna1.txt  s_rpy_Dyna3.txt  s_rpy_Dyna4.txt  s_static_Dyna1.txt  s_xyz_Dyna0.txt  s_xyz_Dyna3.txt  time_log.txt  (+54 more)
src/: DynamicExtractor.cc  Frame.cc  ORBextractor.cc  System.cc  Tracking.cc
(+42 files in other folders)
